Add IDs to product articles in index.html
Added IDs to articles for Apple and Samsung.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <section class="card-container"></section>
 
-        <article class="card">
+        <article class="card" id="apple">
             <h2>Apple</h2>
             <p>Iphone 17 Pro Max</p>
 
@@ -39,7 +39,7 @@
             <p>Prateado, laranja cósmico, azul intenso</p>
         </article>
 
-        <article class="card">
+        <article class="card" id="samsung">
             <h2>Samsung</h2>
             <p>Galaxy S25 Ultra</p>
 
@@ -70,6 +70,8 @@
             <li><a href="https://www.mibrasil.com.br">Xiaomi</a></li>
         </ul>
     </footer>
+<script src="museutech.js"></script>
 
 </body>
 </html>
+
