Change script source in index.html
Updated the script source in the footer from 'museutech.js' to 'script.js'.

--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
             <li><a href="https://www.mibrasil.com.br">Xiaomi</a></li>
         </ul>
     </footer>
-<script src="museutech.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
+
 
