Update iPhone 17 Pro Max details in index.html
Added RAM specifications for iPhone 17 Pro Max.

--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
             <p>R$ 12.499</p>
 
             <h5>Capacidade</h5>
-            <p>256 GB, 512 BG, 1 TB</p>
+            <p>Armazenamento interno: 256 GB, 512 BG, 1 TB</p>
+            <p>Ram: 12 GB</p>
 
             <h5>Cor</h5>
             <p>Prateado, laranja cósmico, azul intenso</p>
+            <h5></h5>
         </article>
 
         <article class="card" id="samsung">
@@ -74,5 +76,6 @@
 
 </body>
 </html>
+
 
 
