Enhance search input with brand suggestions
Added a datalist for brand suggestions in the search input.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <h1>Carros Chefes</h1>
         <div>
             <input type="text" placeholder="Digite a marca de sua escolha">
+            <input id="campo-busca" list="marcas" placeholder="Digite a marca de sua escolha">
+<datalist id="marcas"></datalist>
+        
             <button id="botao-busca" onclick="Procurar()">Procurar</button>
         </div>
     </header>
@@ -76,6 +79,7 @@
 
 </body>
 </html>
+
 
 
 
