Revise product information for Apple and Samsung
Updated product details for Apple and Samsung, including specifications and prices.

--- a/index.html
+++ b/index.html
@@ -32,11 +32,43 @@
             <h3>Ficha Técnica</h3>
 
             <h4>Preço</h4>
-            <p>R$ 12.499</p>
+            <p>A partir de R$ 12.499</p>
 
             <h5>Capacidade</h5>
             <p>Armazenamento interno: 256 GB, 512 BG, 1 TB</p>
             <p>Ram: 12 GB</p>
+
+            <h5>Dados Técnicos</h5>
+            <p>Processador: Apple A19 Pro</p>
+            <p>2x Desempenho + 4x Eficiência</p>
+            <P>GPU: Apple GPU (6-core)</P>
+            <P>64 bits</P>
+            <p>Infravermelho</p>
+
+            <h5>Tela</h5>
+            <p>6.9 Polegadas</p>
+            <p>Super Retina XDR² OLED</p>
+            <p>Resolução de 1320 x 2868 pixels</p>
+            <p>Velocidade de 120 Hz</p>
+            <p>Proteção de tela Ceramic Shield 2</p>
+
+            <h5>Câmeras</h5>
+            <p>3 Câmeras traseiras de 48MP</p>
+            <p>Sensores de F 1.78, F 2.8 e F 2.2</p>
+            <p>Estabilização Ótica</p>
+            <p>Ângulo máximo de 120 °</p>
+            <p>Zoom ótico de 4x</p>
+            <p>Face ID por camera frontal </p>
+            <p>Resolução da gravação de até 4K e 120 Fps</p>
+            <p>Slow Motion de 240 Fps</p>
+            <p>Câmera Frontal de 18MP e F 1.9</p>
+            <p>4K em 60 Fps na Câmera frontal</p>
+
+            <h5>Conectividade</h5>
+            <p>Wifi 802.11 a/b/g/n/ac/6/7</p>
+            <p>Bluetooth 6.0 com A2DP/LE</p>
+            <p>USB Type-C 3.2</p>
+            <p>NFC</p>
 
             <h5>Cor</h5>
             <p>Prateado, laranja cósmico, azul intenso</p>
@@ -78,6 +110,7 @@
 
 </body>
 </html>
+
 
 
 
