--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>Carros Chefes</h1>
+        <h1>Flagships</h1>
         <div>
             <input id="campo-busca" list="marcas" placeholder="Digite a marca de sua escolha">
 <datalist id="marcas"></datalist>
@@ -69,6 +69,9 @@
             <p>Bluetooth 6.0 com A2DP/LE</p>
             <p>USB Type-C 3.2</p>
             <p>NFC</p>
+            <h5>Bateria</h5>
+            <p>Tipo: Lítio</p>
+            <p>Tamanho de 4832 mAh</p>
 
             <h5>Cor</h5>
             <p>Prateado, laranja cósmico, azul intenso</p>
@@ -94,6 +97,11 @@
             <h5>Cor</h5>
             <p>Titânio azul, Titânio preto, Titânio cinza, Titânio prata, Titânio jetblack</p>
         </article>
+
+        <article class="card" id="motorola">
+            <h2>Motorola</h2>
+            <p> Edge 60 Pro 5G</p>
+        </article>
     </main>
 
     <footer class="footer">
@@ -110,6 +118,7 @@
 
 </body>
 </html>
+
 
 
 
