Add Xiaomi 17 Pro Max to product listings
Added Xiaomi 17 Pro Max article to the main section.

--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
             <h2>Motorola</h2>
             <p> Edge 60 Pro 5G</p>
         </article>
+
+        <article class="card" id="xiaomi">
+            <h2>Xiaomi</h2>
+            <p>Xiaomi 17 Pro Max</p>
+
+        </article>
     </main>
 
     <footer class="footer">
@@ -118,6 +124,7 @@
 
 </body>
 </html>
+
 
 
 
