Revise product information for Apple and Samsung
Updated product details for Apple and Samsung, including specifications and pricing.

--- a/index.html
+++ b/index.html
@@ -88,14 +88,48 @@
 
             <h3>Ficha Técnica</h3>
 
-            <h4>Preço</h4>
-            <p>R$ 11.499</p>
+<h4>Preço</h4>
+<p>A partir de R$ 11.999</p>
 
-            <h5>Capacidade</h5>
-            <p>256 GB, 512 GB, 1 TB</p>
+<h5>Capacidade</h5>
+<p>Armazenamento interno de 256 GB, 512 GB ou 1 TB</p>
+<p>Ram de 12 GB</p>
 
-            <h5>Cor</h5>
-            <p>Titânio azul, Titânio preto, Titânio cinza, Titânio prata, Titânio jetblack</p>
+<h5>Dados Técnicos</h5>
+<p>Processador Snapdragon 8 Elite for Galaxy</p>
+<p>Sistema Android 15 com One UI 7</p>
+
+<h5>Tela</h5>
+<p>6.9 Polegadas</p>
+<p>Dynamic AMOLED 2X</p>
+<p>Resolução de 3120 x 1440 pixels</p>
+<p>Velocidade de 1 a 120 Hz</p>
+<p>Proteção Gorilla Armor 2</p>
+
+<h5>Câmeras</h5>
+<p>4 câmeras traseiras</p>
+<p>Principal de 200 MP com estabilização</p>
+<p>Ultra Wide de 50 MP</p>
+<p>Telefoto de 50 MP com zoom ótico de 5x</p>
+<p>Telefoto de 10 MP com zoom ótico de 3x</p>
+<p>Gravação de vídeo até 8K em 30 fps</p>
+<p>Câmera frontal de 12 MP</p>
+
+<h5>Conectividade</h5>
+<p>5G</p>
+<p>Wi-Fi 7 e 6E</p>
+<p>Bluetooth 5.4</p>
+<p>NFC</p>
+<p>USB Type-C</p>
+
+<h5>Bateria</h5>
+<p>5.000 mAh</p>
+<p>Carregamento rápido de 45W</p>
+<p>Carregamento sem fio de 25W</p>
+
+<h5>Cor</h5>
+<p>Titânio Azul, Titânio Preto, Titânio Prata, Titânio Cinza e Titânio Jetblack</p>
+
         </article>
 
         <article class="card" id="motorola">
@@ -124,6 +158,7 @@
 
 </body>
 </html>
+
 
 
 
